--- a/client/src/styles/app.scss
+++ b/client/src/styles/app.scss
@@ -12,4 +12,5 @@ body{
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap');
 
 // sub style components
-@import "./loginPage"
+@import "./loginPage";
+@import "./loginBtn";
