--- a/client/src/styles/_loginBtn.scss
+++ b/client/src/styles/_loginBtn.scss
@@ -3,3 +3,34 @@
     align-self: center;
     margin-top: 1%;
 }
+
+// Media queries
+
+/* ----------- iPhone 5, 5S, 5C and 5SE ----------- */
+
+/* Portrait and Landscape */
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+    .log-btn{
+        width: 80%;
+        text-align: center;
+    };
+
+};
+
+/* ----------- iPad 3, 4 and Pro 9.7" ----------- */
+
+/* Portrait and Landscape */
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (-webkit-min-device-pixel-ratio: 2) {
+    .log-btn{
+        width: 80%;
+        text-align: center;
+    };
+
+    
+}
